--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,6 @@
     "48": "favicon.ico",
     "128": "favicon.ico"
   },
-  "permissions": [
-  ],
-  "chrome_url_overrides":{"newtab":"index.html"}
-
+  "permissions": [],
+  "chrome_url_overrides": { "newtab": "index.html" }
 }
