--- a/manifest.json
+++ b/manifest.json
@@ -4,9 +4,9 @@
   "description": "Subscribe to flatypus on YouTube at youtube.com/flatypus",
   "version": "0.0.1",
   "icons": {
-    "16": "favicon.ico",
-    "48": "favicon.ico",
-    "128": "favicon.ico"
+    "16": "ico.png",
+    "48": "ico.png",
+    "128": "ico.png"
   },
   "permissions": ["tabs", "storage"],
 
